creating 'index.js' file
* importing express with commonJS syntax.
* creating an express app instance.
* setting initial routing '/' to send a string when navigating to URL localhost:3000.
* running express app with listen.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App Bienes Raices",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
